# BeyondResume

./: .env.example  .gitignore  README.md  docker-compose.yml  otence
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/tests/: test_ai_hiring_intelligence.py  test_ai_hiring_intelligence_endpoint.py  test_ai_hiring_intelligence_prompt.py  test_ai_match_explanation.py  test_auth_api.py  test_auth_dependencies.py  test_auth_security.py  test_auth_service.py  test_candidate_api.py  test_candidate_service.py  test_candidate_vacancies_api.py  test_candidate_vacancies_service.py  test_dashboard_api.py  test_database_migration.py  test_database_models.py  test_demo_github_provider.py  test_employer_api.py  test_evidence_hub_api.py  test_evidence_hub_service.py  test_github_code_usage_extractor.py  test_github_evidence_api.py  test_github_evidence_commands.py  test_github_evidence_persistence_adapter.py  test_github_evidence_service.py  test_github_evidence_skill_link_builder.py  test_github_evidence_skill_link_orchestration.py  test_github_full_scan_service.py  test_github_manifests.py  test_github_repository_service.py  test_github_scan_jobs.py  test_github_scan_service.py  test_github_skill_extraction_result_companions.py  test_github_skill_extraction_results.py  test_github_skill_extractor.py  test_github_skill_link_reconciliation.py  test_github_skill_reextraction.py  test_github_skill_reextraction_errors.py  test_github_skill_resolution.py  test_github_skill_rules.py  test_github_snapshot.py  (+23 more)
(+239 files in other folders)
