[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beyondresume-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "black>=24,<26",
  "mypy>=1.0,<2",
  "ruff>=0.6,<1"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
