[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beyondresume-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "argon2-cffi>=23,<26",
  "email-validator>=2,<3",
  "fastapi>=0.115,<1",
  "PyJWT>=2.8,<3",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "python-multipart>=0.0.9,<1",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "black>=24,<26",
  "httpx>=0.27,<1",
  "mypy>=1.0,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
